create basic sidebar layout

--- a/index.html
+++ b/index.html
@@ -3,10 +3,21 @@
   <head>
     <meta charset="UTF-8">
     <title>Griffin the Folf (Thomas Sirack)</title>
+
+    <link rel="stylesheet" href="style.css">
   </head>
 
   <body>
-    <h1>Watch this space!</h1>
-    <p>Coming soon: my new website.</p>
+
+    <nav class="navbar">
+      <img src="images/pocket.jpg" title="Base by Stardust Fox Art, coloured by ScoutFoxx" id="logo">
+
+      <p class="navheader">Griffin!</p>
+    </nav>
+
+    <main>
+
+    </main>
+
   </body>
 </html>
