create ref sheet page; make navbar stay on screen consistently

--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@
   <body>
 
     <nav class="navbar">
-      <img src="images/pocket.jpg" title="Base by Stardust Fox Art, coloured by ScoutFoxx" id="logo">
+      <a href="index.html">
+        <img src="images/pocket.jpg" title="Base by Stardust Fox Art, coloured by ScoutFoxx" id="logo">
+      </a>
 
       <p class="navheader">Griffin!</p>
     </nav>
