--- a/fursona.html
+++ b/fursona.html
@@ -16,6 +16,14 @@
       </a>
 
       <p class="navheader">Griffin!</p>
+
+      <ul>
+        <li><a href="index.html">Home</a></li>
+        <li><b>Ref Sheet</b></li>
+        <li><a href="#">Tech Projects</a></li>
+        <li><a href="#">About Me</a></li>
+        <li><a href="#">Contact</a></li>
+      </ul>
     </nav>
 
     <main>
