--- a/index.html
+++ b/index.html
@@ -15,6 +15,14 @@
       </a>
 
       <p class="navheader">Griffin!</p>
+
+      <ul>
+        <li><b>Home</b></li>
+        <li><a href="fursona.html">Ref Sheet</a></li>
+        <li><a href="#">Tech Projects</a></li>
+        <li><a href="#">About Me</a></li>
+        <li><a href="#">Contact</a></li>
+      </ul>
     </nav>
 
     <main>
