add copyright notice

--- a/index.html
+++ b/index.html
@@ -23,6 +23,13 @@
         <li><a href="#">About Me</a></li>
         <li><a href="#">Contact</a></li>
       </ul>
+
+      <div class="copyright">
+        <a href="#">
+          Copyright &copy; 2021 Thomas Sirack.
+          Click here for further information.
+        </a>
+      </div>
     </nav>
 
     <main>
