whoops, forgot to add the correct link location

--- a/fursona.html
+++ b/fursona.html
@@ -26,7 +26,7 @@
       </ul>
 
       <div class="copyright">
-        <a href="#">
+        <a href="copyright.html">
           Copyright &copy; 2021 Thomas Sirack.
           Click here for further information.
         </a>
