--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
       </ul>
 
       <div class="copyright">
-        <a href="#">
+        <a href="copyright.html">
           Copyright &copy; 2021 Thomas Sirack.
           Click here for further information.
         </a>
