finally create a proper index page

--- a/index.html
+++ b/index.html
@@ -34,6 +34,33 @@
 
     <main>
 
+      <h1>Welcome</h1>
+      <p class="subtitle">to whatever this is</p>
+
+      <p>
+        <b>Hi!</b> I'm Thomas, but you can call me Griffin (they/them).
+        I'm a person on the internet with interests in cars, technology,
+        and the furry fandom.
+      </p>
+
+      <p>
+        Most of the time I'm either stuck in school or hopelessly frustrating
+        over any one of my numerous experiments. These often involve old tech,
+        which I love messing around with!
+      </p>
+
+      <p>
+        I've contributed to some software projects over the years, namely:
+      </p>
+      <ul>
+        <li><a href="https://github.com/haikuports/haikuports">HaikuPorts software repository</a></li>
+        <li><a href="#">Backporting modern software to PowerPC</a></li>
+      </ul>
+
+      <p>
+        Feel free to shoot me a message!
+      </p>
+
     </main>
 
   </body>
