add contacts page

--- a/fursona.html
+++ b/fursona.html
@@ -22,7 +22,7 @@
         <li><b>Ref Sheet</b></li>
         <li><a href="#">Tech Projects</a></li>
         <li><a href="#">About Me</a></li>
-        <li><a href="#">Contact</a></li>
+        <li><a href="contact.html">Contact</a></li>
       </ul>
 
       <div class="copyright">
