--- a/copyright.html
+++ b/copyright.html
@@ -21,7 +21,7 @@
         <li><a href="fursona.html">Ref Sheet</a></li>
         <li><a href="#">Tech Projects</a></li>
         <li><a href="#">About Me</a></li>
-        <li><a href="#">Contact</a></li>
+        <li><a href="contact.html">Contact</a></li>
       </ul>
 
       <div class="copyright">
