add tech projects page

--- a/contact.html
+++ b/contact.html
@@ -19,7 +19,7 @@
       <ul>
         <li><a href="index.html">Home</a></li>
         <li><a href="fursona.html">Ref Sheet</a></li>
-        <li><a href="#">Tech Projects</a></li>
+        <li><a href="techprojects.html">Tech Projects</a></li>
         <li><a href="#">About Me</a></li>
         <li><b>Contact</b></li>
       </ul>
