--- a/fursona.html
+++ b/fursona.html
@@ -20,7 +20,7 @@
       <ul>
         <li><a href="index.html">Home</a></li>
         <li><b>Ref Sheet</b></li>
-        <li><a href="#">Tech Projects</a></li>
+        <li><a href="techprojects.html">Tech Projects</a></li>
         <li><a href="#">About Me</a></li>
         <li><a href="contact.html">Contact</a></li>
       </ul>
