--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       <ul>
         <li><b>Home</b></li>
         <li><a href="fursona.html">Ref Sheet</a></li>
-        <li><a href="#">Tech Projects</a></li>
+        <li><a href="techprojects.html">Tech Projects</a></li>
         <li><a href="#">About Me</a></li>
         <li><a href="contact.html">Contact</a></li>
       </ul>
