--- a/copyright.html
+++ b/copyright.html
@@ -1,85 +1,97 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en-CA">
   <head>
     <meta charset="UTF-8">
-    <title>Copyright | Griffin the Folf (Thomas Sirack)</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css" integrity="sha384-zCbKRCUGaJDkqS1kPbPd7TveP5iyJE0EjAuZQTgFLD2ylzuqKfdKlfG/eSrtxUkn" crossorigin="anonymous">
+
+    <title>Griffin the Folf (Thomas Sirack)</title>
   </head>
 
-  <body>
+  <body class="bg-dark">
 
-    <nav class="navbar">
-      <a href="index.html">
-        <img src="images/pocket.jpg" title="Base by Stardust Fox Art, coloured by ScoutFoxx" id="logo">
-      </a>
+    <div class="container">
+      <div class="jumbotron jumbotron-fluid">
+        <header class="text-center">
+          <img class="rounded-circle w-25 h-25" src="images/licc.jpg">
+          <h1 class="display-4">Griffin!</h1>
 
-      <p class="navheader">Griffin!</p>
+          <div class="container">
+            <nav class="navbar navbar-expand-lg bg-light navbar-light" role="navigation">
+              <ul class="navbar-nav mr-auto">
 
-      <ul>
-        <li><a href="index.html">Home</a></li>
-        <li><a href="fursona.html">Ref Sheet</a></li>
-        <li><a href="techprojects.html">Tech Projects</a></li>
-        <li><a href="#">About Me</a></li>
-        <li><a href="contact.html">Contact</a></li>
-      </ul>
+                <li class="nav-item">
+                  <a class="nav-link" href="index.html">Home</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="#">Tech Stuff</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="#">Other Stuff</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="#">Contact</a>
+                </li>
 
-      <div class="copyright">
-        <a href="copyright.html">
-          Copyright &copy; 2021 Thomas Sirack.
-          Click here for further information.
-        </a>
+              </ul>
+
+              <span class="nav-item">
+                <a class="text-dark nav-link" href="#">Copyright</a>
+              </span>
+            </nav>
+          </div>
+        </header>
+
+        <hr>
+
+        <main class="container">
+          <h1>Legal Stuff</h1>
+          <p class="lead">
+            The following is transcluded from the <span class="text-monospace">
+            LICENCE</span> file in the <a href="https://github.com/GriffintheFolf/griffinthefolf.github.io">GitHub repository</a>:
+          </p>
+
+          <pre>
+The source of the website, that is the HTML files, CSS stylesheets,
+and other related files, are licensed under the MIT Licence described below:
+
+Copyright (c) 2021 Thomas Sirack
+
+Permission is hereby granted, free of charge, to any person obtaining a copy
+of this software and associated documentation files (the "Software"), to deal
+in the Software without restriction, including without limitation the rights
+to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
+copies of the Software, and to permit persons to whom the Software is
+furnished to do so, subject to the following conditions:
+
+The above copyright notice and this permission notice shall be included in all
+copies or substantial portions of the Software.
+
+THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
+IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
+FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
+AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
+LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
+OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
+SOFTWARE.
+
+------------------------------------------
+
+Any images on the site MAY NOT BE REDISTRIBUTED without my prior permission
+UNLESS OTHERWISE NOTED.
+
+Furthermore, any software that may be distributed or linked to here
+is subject to its respective licensing terms. These will always be provided.
+          </pre>
+        </main>
+
       </div>
-    </nav>
+    </div>
 
-    <main>
-
-      <h1>Copyright Information</h1>
-      <p class="subtitle">Don't steal stuff</p>
-
-      <p>
-        The following is transcluded from the
-        <code>LICENCE</code> file on this site's
-        <a href="https://github.com/GriffintheFolf/griffinthefolf.github.io">
-        GitHub repository
-        </a>:
-      </p>
-
-      <p class="code">
-        The source of the website, that is the HTML files, CSS stylesheets,<br>
-        and other related files, are licensed under the MIT Licence described below:<br><br>
-
-        Copyright (c) 2021 Thomas Sirack<br><br>
-
-        Permission is hereby granted, free of charge, to any person obtaining a copy<br>
-        of this software and associated documentation files (the &quot;Software&quot;), to deal<br>
-        in the Software without restriction, including without limitation the rights<br>
-        to use, copy, modify, merge, publish, distribute, sublicense, and/or sell<br>
-        copies of the Software, and to permit persons to whom the Software is<br>
-        furnished to do so, subject to the following conditions:<br><br>
-
-        The above copyright notice and this permission notice shall be included in all<br>
-        copies or substantial portions of the Software.<br><br>
-
-        THE SOFTWARE IS PROVIDED &quot;AS IS&quot;, WITHOUT WARRANTY OF ANY KIND, EXPRESS OR<br>
-        IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,<br>
-        FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE<br>
-        AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER<br>
-        LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,<br>
-        OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE<br>
-        SOFTWARE.<br><br>
-
-        ------------------------------------------<br><br>
-
-        Any images on the site MAY NOT BE REDISTRIBUTED without my prior permission<br>
-        UNLESS OTHERWISE NOTED.<br><br>
-        This is to prevent theft of art, both from the artists who created it<br>
-        and for protection of my fursona's design.<br><br>
-
-        Furthermore, any software that may be distributed or linked to here<br>
-        is subject to its respective licensing terms. These will always be provided.
-      </p>
-    </main>
-
+    <!--Bootstrap components-->
+    <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-fQybjgWLrvvRgtW6bFlB7jaZrFsaBXjsOMm/tB9LTS58ONXgqbR9W8oWht/amnpF" crossorigin="anonymous"></script>
   </body>
 </html>
