--- a/index.html
+++ b/index.html
@@ -1,67 +1,78 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en-CA">
   <head>
     <meta charset="UTF-8">
-    <title>Griffin the Folf (Thomas Sirack)</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css" integrity="sha384-zCbKRCUGaJDkqS1kPbPd7TveP5iyJE0EjAuZQTgFLD2ylzuqKfdKlfG/eSrtxUkn" crossorigin="anonymous">
+
+    <title>Griffin the Folf (Thomas Sirack)</title>
   </head>
 
-  <body>
+  <body class="bg-dark">
 
-    <nav class="navbar">
-      <a href="index.html">
-        <img src="images/pocket.jpg" title="Base by Stardust Fox Art, coloured by ScoutFoxx" id="logo">
-      </a>
+    <div class="container">
+      <div class="jumbotron jumbotron-fluid">
+        <header class="text-center">
+          <img class="rounded-circle w-25 h-25" src="images/licc.jpg">
+          <h1 class="display-4">Griffin!</h1>
 
-      <p class="navheader">Griffin!</p>
+          <div class="container">
+            <nav class="navbar navbar-expand-lg bg-light navbar-light" role="navigation">
+              <ul class="navbar-nav mr-auto">
 
-      <ul>
-        <li><b>Home</b></li>
-        <li><a href="fursona.html">Ref Sheet</a></li>
-        <li><a href="techprojects.html">Tech Projects</a></li>
-        <li><a href="#">About Me</a></li>
-        <li><a href="contact.html">Contact</a></li>
-      </ul>
+                <li class="nav-item">
+                  <a class="nav-link" href="#">Home</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="#">Tech Stuff</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="#">Other Stuff</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="#">Contact</a>
+                </li>
 
-      <div class="copyright">
-        <a href="copyright.html">
-          Copyright &copy; 2021 Thomas Sirack.
-          Click here for further information.
-        </a>
+              </ul>
+
+              <span class="nav-item">
+                <a class="text-dark nav-link" href="copyright.html">Copyright</a>
+              </span>
+            </nav>
+          </div>
+        </header>
+
+        <hr>
+
+        <main class="container">
+          <h1>Hello!</h1>
+          <p class="lead">
+            I'm Thomas, but you can call me Griffin (they/them).
+          </p>
+
+          <p>
+            I exist on the internet as a collector of old tech, with an
+            obsession of pushing machines further than they were ever
+            intended.
+          </p>
+
+          <p>
+            Presently, I am working on programs and libraries in various states
+            of completion, as well as anticipating to get a car soon.
+          </p>
+
+          <p>
+            This site is work in progress, check back soon!
+          </p>
+        </main>
+
       </div>
-    </nav>
+    </div>
 
-    <main>
-
-      <h1>Welcome</h1>
-      <p class="subtitle">to whatever this is</p>
-
-      <p>
-        <b>Hi!</b> I'm Thomas, but you can call me Griffin (they/them).
-        I'm a person on the internet with interests in cars, technology,
-        and the furry fandom.
-      </p>
-
-      <p>
-        Most of the time I'm either stuck in school or hopelessly frustrating
-        over any one of my numerous experiments. These often involve old tech,
-        which I love messing around with!
-      </p>
-
-      <p>
-        I've contributed to some software projects over the years, namely:
-      </p>
-      <ul>
-        <li><a href="https://github.com/haikuports/haikuports">HaikuPorts software repository</a></li>
-        <li><a href="#">Backporting modern software to PowerPC</a></li>
-      </ul>
-
-      <p>
-        Feel free to shoot me a message!
-      </p>
-
-    </main>
-
+    <!--Bootstrap components-->
+    <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-fQybjgWLrvvRgtW6bFlB7jaZrFsaBXjsOMm/tB9LTS58ONXgqbR9W8oWht/amnpF" crossorigin="anonymous"></script>
   </body>
 </html>
