--- a/copyright.html
+++ b/copyright.html
@@ -23,7 +23,7 @@
               <ul class="navbar-nav mr-auto">
 
                 <li class="nav-item">
-                  <a class="nav-link" href="index.html">Home</a>
+                  <a class="nav-link" href="/">Home</a>
                 </li>
                 <li class="nav-item">
                   <a class="nav-link" href="#">Tech Stuff</a>
