--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                   <a class="nav-link" href="#">Tech Stuff</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="#">Other Stuff</a>
+                  <a class="nav-link" href="otherstuff.html">Other Stuff</a>
                 </li>
                 <li class="nav-item">
                   <a class="nav-link" href="#">Contact</a>
