--- a/otherstuff.html
+++ b/otherstuff.html
@@ -109,9 +109,9 @@
           <div class="container d-inline">
             <h2>Cars</h2>
             <p>
-              I have a strong interest in repairing cars. Unfortunately,
-              I don't own a car at this time. Hopefully that will change
-              soon!
+              I have a strong interest in repairing cars. Recently, I
+              acquired a nice Chevrolet Aveo for myself, with a stick
+              shift!
             </p>
           </div>
         </main>
