--- a/copyright.html
+++ b/copyright.html
@@ -29,7 +29,7 @@
                   <a class="nav-link" href="#">Tech Stuff</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="#">Other Stuff</a>
+                  <a class="nav-link" href="otherstuff.html">Other Stuff</a>
                 </li>
                 <li class="nav-item">
                   <a class="nav-link" href="#">Contact</a>
@@ -57,7 +57,7 @@
 The source of the website, that is the HTML files, CSS stylesheets,
 and other related files, are licensed under the MIT Licence described below:
 
-Copyright (c) 2021 Thomas Sirack
+Copyright (c) 2021-2022 Thomas Sirack
 
 Permission is hereby granted, free of charge, to any person obtaining a copy
 of this software and associated documentation files (the "Software"), to deal
@@ -83,7 +83,8 @@ Any images on the site MAY NOT BE REDISTRIBUTED without my prior permission
 UNLESS OTHERWISE NOTED.
 
 Furthermore, any software that may be distributed or linked to here
-is subject to its respective licensing terms. These will always be provided.
+is subject to its respective licensing terms. These will always be provided
+wherever possible.
           </pre>
         </main>
 
