add legacy site for ancient/text-mode browsers

--- a/index.html
+++ b/index.html
@@ -12,6 +12,17 @@
 
   <body class="bg-dark">
 
+    <noscript>
+      <h1>
+        Your browser does not support JavaScript, or JavaScript
+        has been disabled.
+      </h1>
+
+      <h2>
+        You may consider using the <a href="legacy/">legacy site</a> instead.
+      </h2>
+    </noscript>
+
     <div class="container">
       <div class="jumbotron jumbotron-fluid">
         <header class="text-center">
