Start fresh (again!)
Goodbye Bootstrap

--- a/contact.html
+++ b/contact.html
@@ -67,27 +67,41 @@
     </header>
 
     <main>
-      <img src="images/licc.jpg" style="float:right;" width="25%" height="25%">
-
       <hgroup>
-        <h1>Hello.</h1>
-        <h2>I'm Thomas, but you can call me Griffin. (they/them)</h2>
+        <h1>Contacts</h1>
+        <h2>Where to find me</h2>
       </hgroup>
 
       <p>
-        I exist on the internet as a collector of old tech, with an
-        obsession of pushing machines further than they were ever
-        intended.
+        I maintain accounts on many services. Some of these are listed below:
       </p>
 
-      <p>
-        I also tinker around with software development from time to time.
-        Other side hobbies include cars and casual photography.
-      </p>
+      <ul>
+        <li>
+          Email: <a href="mailto:tsirack@protonmail.com">tsirack@protonmail.com</a>
+        </li>
 
-      <p>
-        Remember, don't forget to have a great day!
-      </p>
+        <li>
+          Discord: Griffin#2887
+        </li>
+
+        <li>
+          GitHub: <a href="https://github.com/GriffintheFolf">@GriffintheFolf</a>
+        </li>
+
+        <li>
+          Matrix: @griffinthefolf:matrix.org
+        </li>
+
+        <li>
+          Telegram: <a href="https://t.me/GriffintheFolf">@GriffintheFolf</a>
+        </li>
+
+        <li>
+          Twitter: <a href="https://twitter.com/GriffintheFolf">@GriffintheFolf</a>
+        </li>
+      </ul>
+      
     </main>
 
     <footer>
