--- a/copyright.html
+++ b/copyright.html
@@ -1,61 +1,85 @@
 <!DOCTYPE html>
-<html lang="en-CA">
+<html lang="en">
   <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Griffin the Folf (Thomas Sirack)</title>
 
-    <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css" integrity="sha384-zCbKRCUGaJDkqS1kPbPd7TveP5iyJE0EjAuZQTgFLD2ylzuqKfdKlfG/eSrtxUkn" crossorigin="anonymous">
+    <link rel="stylesheet" href="css/pico.classless.min.css">
 
-    <title>Copyright | Griffin the Folf (Thomas Sirack)</title>
+    <!-- Pico CSS overrides -->
+    <style>
+      @media (min-width: 576px) {
+        body > header,
+      body > main,
+      body > footer,
+      section {
+          --block-spacing-vertical: calc(var(--spacing) * 0.125);
+        }
+      }
+      @media (min-width: 768px) {
+        body > header,
+      body > main,
+      body > footer,
+      section {
+          --block-spacing-vertical: calc(var(--spacing) * 0.25);
+        }
+      }
+      @media (min-width: 992px) {
+        body > header,
+      body > main,
+      body > footer,
+      section {
+          --block-spacing-vertical: calc(var(--spacing) * 0.5);
+        }
+      }
+      @media (min-width: 1200px) {
+        body > header,
+      body > main,
+      body > footer,
+      section {
+          --block-spacing-vertical: calc(var(--spacing) * 0.75);
+        }
+      }
+    </style>
   </head>
 
-  <body class="bg-dark">
+  <body>
+    <header>
+      <hgroup>
+        <h1>Griffin!</h1>
+        <h2>Another furry on the internet</h2>
+      </hgroup>
 
-    <div class="container">
-      <div class="jumbotron jumbotron-fluid">
-        <header class="text-center">
-          <img class="rounded-circle w-25 h-25" src="images/licc.jpg">
-          <h1 class="display-4">Griffin!</h1>
+      <nav>
+        <ul>
+          <li><a href="/">Home</a></li>
+          <li><a href="techstuff.html">Tech Stuff</a></li>
+          <li><a href="otherstuff.html">Other Stuff</a></li>
+          <li><a href="contact.html">Contact</a></li>
+        </ul>
+        <ul>
+          <li><a href="legacy/">Legacy Site for Old Browsers</a></li>
+        </ul>
+      </nav>
 
-          <div class="container">
-            <nav class="navbar navbar-expand-lg bg-light navbar-light" role="navigation">
-              <ul class="navbar-nav mr-auto">
+      <hr>
+    </header>
 
-                <li class="nav-item">
-                  <a class="nav-link" href="/">Home</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="#">Tech Stuff</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="otherstuff.html">Other Stuff</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="#">Contact</a>
-                </li>
+    <main>
+      <hgroup>
+        <h1>Copyright</h1>
+        <h2>And other legal shenanigans</h2>
+      </hgroup>
 
-              </ul>
+      <p>
+        The following is transcluded from the LICENCE file on the
+        <a href="https://github.com/GriffintheFolf/griffinthefolf.github.io">Github repo</a>:
+      </p>
 
-              <span class="nav-item">
-                <a class="text-dark nav-link" href="#">Copyright</a>
-              </span>
-            </nav>
-          </div>
-        </header>
-
-        <hr>
-
-        <main class="container">
-          <h1>Legal Stuff</h1>
-          <p class="lead">
-            The following is transcluded from the <span class="text-monospace">
-            LICENCE</span> file in the <a href="https://github.com/GriffintheFolf/griffinthefolf.github.io">GitHub repository</a>:
-          </p>
-
-          <pre>
-The source of the website, that is the HTML files, CSS stylesheets,
-and other related files, are licensed under the MIT Licence described below:
+      <pre>
+The source of the website, that is the HTML and other related files,
+are licensed under the MIT Licence described below:
 
 Copyright (c) 2021-2022 Thomas Sirack
 
@@ -85,14 +109,40 @@ UNLESS OTHERWISE NOTED.
 Furthermore, any software that may be distributed or linked to here
 is subject to its respective licensing terms. These will always be provided
 wherever possible.
-          </pre>
-        </main>
 
-      </div>
-    </div>
+------------------------------------------
 
-    <!--Bootstrap components-->
-    <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-fQybjgWLrvvRgtW6bFlB7jaZrFsaBXjsOMm/tB9LTS58ONXgqbR9W8oWht/amnpF" crossorigin="anonymous"></script>
+The main (non-legacy) portion of the website uses Pico.css (https://picocss.com):
+
+MIT License
+
+Copyright (c) 2019-2021 Pico
+
+Permission is hereby granted, free of charge, to any person obtaining a copy
+of this software and associated documentation files (the "Software"), to deal
+in the Software without restriction, including without limitation the rights
+to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
+copies of the Software, and to permit persons to whom the Software is
+furnished to do so, subject to the following conditions:
+
+The above copyright notice and this permission notice shall be included in all
+copies or substantial portions of the Software.
+
+THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
+IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
+FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
+AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
+LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
+OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.
+      </pre>
+    </main>
+
+    <footer>
+      <hr>
+
+      <p>
+        Copyright &copy; 2021-2022 Thomas Sirack.
+      </p>
+    </footer>
   </body>
 </html>
