--- a/otherstuff.html
+++ b/otherstuff.html
@@ -1,126 +1,135 @@
 <!DOCTYPE html>
-<html lang="en-CA">
+<html lang="en">
   <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Griffin the Folf (Thomas Sirack)</title>
 
-    <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css" integrity="sha384-zCbKRCUGaJDkqS1kPbPd7TveP5iyJE0EjAuZQTgFLD2ylzuqKfdKlfG/eSrtxUkn" crossorigin="anonymous">
+    <link rel="stylesheet" href="css/pico.classless.min.css">
 
-    <title>Other Stuff | Griffin the Folf (Thomas Sirack)</title>
+    <!-- Pico CSS overrides -->
+    <style>
+      @media (min-width: 576px) {
+        body > header,
+      body > main,
+      body > footer,
+      section {
+          --block-spacing-vertical: calc(var(--spacing) * 0.125);
+        }
+      }
+      @media (min-width: 768px) {
+        body > header,
+      body > main,
+      body > footer,
+      section {
+          --block-spacing-vertical: calc(var(--spacing) * 0.25);
+        }
+      }
+      @media (min-width: 992px) {
+        body > header,
+      body > main,
+      body > footer,
+      section {
+          --block-spacing-vertical: calc(var(--spacing) * 0.5);
+        }
+      }
+      @media (min-width: 1200px) {
+        body > header,
+      body > main,
+      body > footer,
+      section {
+          --block-spacing-vertical: calc(var(--spacing) * 0.75);
+        }
+      }
+    </style>
   </head>
 
-  <body class="bg-dark">
+  <body>
+    <header>
+      <hgroup>
+        <h1>Griffin!</h1>
+        <h2>Another furry on the internet</h2>
+      </hgroup>
 
-    <div class="container">
-      <div class="jumbotron jumbotron-fluid">
-        <header class="text-center">
-          <img class="rounded-circle w-25 h-25" src="images/licc.jpg">
-          <h1 class="display-4">Griffin!</h1>
+      <nav>
+        <ul>
+          <li><a href="/">Home</a></li>
+          <li><a href="techstuff.html">Tech Stuff</a></li>
+          <li><a href="#">Other Stuff</a></li>
+          <li><a href="contact.html">Contact</a></li>
+        </ul>
+        <ul>
+          <li><a href="legacy/">Legacy Site for Old Browsers</a></li>
+        </ul>
+      </nav>
 
-          <div class="container">
-            <nav class="navbar navbar-expand-lg bg-light navbar-light" role="navigation">
-              <ul class="navbar-nav mr-auto">
+      <hr>
+    </header>
 
-                <li class="nav-item">
-                  <a class="nav-link" href="/">Home</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="#">Tech Stuff</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="otherstuff.html">Other Stuff</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="#">Contact</a>
-                </li>
+    <main>
+      <hgroup>
+        <h1>Other Stuff</h1>
+        <h2>Side hobbies not related to tech</h2>
+      </hgroup>
 
-              </ul>
+      <h2>Photography</h2>
+      <p>
+        I do casual photography as a side hobby. Sometimes, I post these images to
+        <a href="https://commons.wikimedia.org/wiki/User:GriffintheFolf">Wikimedia Commons</a>
+        for all to see.
+      </p>
+      <div>
+        <img src="images/stilllife.jpg" alt="A sculpture consisting of a bowl, various pieces of fruit, and a picture frame" width="40%" height="40%">
+        <img src="images/stilllife2.jpg" alt="A sculpture consisting of a bowl, various pieces of fruit, and a picture frame" width="40%" height="40%">
 
-              <span class="nav-item">
-                <a class="text-dark nav-link" href="copyright.html">Copyright</a>
-              </span>
-            </nav>
-          </div>
-        </header>
-
-        <hr>
-
-        <main class="container">
-          <h1>Other Stuff</h1>
-          <p class="lead">
-            Stuff I do not related to tech
-          </p>
-
-          <h2>Photography</h2>
-          <p>
-            I like to take pictures and practice my skiils with photography
-            as a casual hobby. Sometimes, I post these images onto Wikimedia
-            Commons for all to see and use. You can find me there at
-            <a href="https://commons.wikimedia.org/wiki/User:GriffintheFolf">
-              GriffintheFolf.
+        <p>
+          <i>
+            <a href="https://commons.wikimedia.org/wiki/File:%22Still_Life%22_by_Studio_F_Minus_-_side_view.jpg">
+              The
             </a>
-          </p>
-
-          <div class="container d-inline">
-            <img class="w-25 h-25" src="images/stilllife.jpg">
-            <img class="w-25 h-25" src="images/stilllife2.jpg">
-
-            <p>
-                <i>
-                  <a href="https://commons.wikimedia.org/wiki/File:%22Still_Life%22_by_Studio_F_Minus_-_side_view.jpg">
-                    The
-                  </a>
-                  above
-                  <a href="https://commons.wikimedia.org/wiki/File:%22Still_Life%22_by_Studio_F_Minus_-_through_frame.jpg">
-                    images
-                  </a>
-
-                  are licensed under the Creative Commons International 4.0
-                  Unported License.
-                </i>
-            </p>
-          </div>
-
-          <h2>Furry Fandom</h2>
-          <p>
-            What more would my presence online be without my fursona,
-            Griffin? He's a green folf (fox-wolf hybrid) who loves to hug
-            people!
-          </p>
-          <p>
-            If you want to see my ref sheet, click on it for a full
-            resolution version.
-          </p>
-
-          <div class="container d-inline">
-            <a href="images/ref.png">
-              <img class="w-50 h-50" src="images/ref_preview.png">
+            <a href="https://commons.wikimedia.org/wiki/File:%22Still_Life%22_by_Studio_F_Minus_-_through_frame.jpg">
+              above
             </a>
-            <img class="w-25 h-25" src="images/bricks.jpg">
 
-            <p>
-              <i>
-                Ref sheet by @Samadriel_Art, bricks artwork by @TheConner_
-              </i>
-            </p>
-          </div>
-
-          <div class="container d-inline">
-            <h2>Cars</h2>
-            <p>
-              I have a strong interest in repairing cars. Recently, I
-              acquired a nice Chevrolet Aveo for myself, with a stick
-              shift!
-            </p>
-          </div>
-        </main>
-
+            images are licensed under the Creative Commons Attribution 4.0
+            International License and may be used for any purpose.
+          </i>
+        </p>
       </div>
-    </div>
 
-    <!--Bootstrap components-->
-    <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-fQybjgWLrvvRgtW6bFlB7jaZrFsaBXjsOMm/tB9LTS58ONXgqbR9W8oWht/amnpF" crossorigin="anonymous"></script>
+      <h2>Furry!</h2>
+      <p>
+        What more would my existence online be like without my fursona, Griffin?
+      </p>
+      <div>
+        <img src="images/ref_preview.png" alt="A reference sheet for a green folf with purple, blue, and white accents" width="40%" height="40%">
+
+        <p>
+          <i>
+            Ref sheet by @Samadriel_Art
+          </i>
+        </p>
+      </div>
+
+      <h2>Cars</h2>
+      <p>
+        Cars interest me in their inner workings. It is certainly a potential career
+        possibility in the future.
+      </p>
+      <p>
+        Furthermore, I own one myself! Stick shift is fun.
+      </p>
+    </main>
+
+    <footer>
+      <hr>
+
+      <p>
+        Copyright &copy; 2021-2022 Thomas Sirack. See the
+        <a href="copyright.html">
+          LICENCE file
+        </a> for more details.
+      </p>
+    </footer>
   </body>
 </html>
