Redesign number three! and hopefully the last one...
The site was a bit too large anyway, and HTML 3.2 makes redesigning
stupidly easy, so it was a nobrainer.

--- a/index.html
+++ b/index.html
@@ -1,104 +1,81 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Griffin the Folf (Thomas Sirack)</title>
+<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 3.2 Final//EN">
+<html>
+    <head>
+        <meta http-equiv="content-type" content="text/html; charset=UTF-8">
 
-    <link rel="stylesheet" href="css/pico.classless.min.css">
+        <title>Griffin</title>
+    </head>
 
-    <!-- Pico CSS overrides -->
-    <style>
-      @media (min-width: 576px) {
-        body > header,
-      body > main,
-      body > footer,
-      section {
-          --block-spacing-vertical: calc(var(--spacing) * 0.125);
-        }
-      }
-      @media (min-width: 768px) {
-        body > header,
-      body > main,
-      body > footer,
-      section {
-          --block-spacing-vertical: calc(var(--spacing) * 0.25);
-        }
-      }
-      @media (min-width: 992px) {
-        body > header,
-      body > main,
-      body > footer,
-      section {
-          --block-spacing-vertical: calc(var(--spacing) * 0.5);
-        }
-      }
-      @media (min-width: 1200px) {
-        body > header,
-      body > main,
-      body > footer,
-      section {
-          --block-spacing-vertical: calc(var(--spacing) * 0.75);
-        }
-      }
-    </style>
-  </head>
+    <body bgcolor="#000000" text="#FFFFFF" link="#00CED1" vlink="#00CED1">
+        <center>
+            <table align="center">
+                <tr align="center">
+                    <td>
+                        <img src="images/roof.jpg" height="250">
+                        <h1>Griffin!</h1>
+                    </td>
+                </tr>
 
-  <body>
-    <header>
-      <hgroup>
-        <h1>Griffin!</h1>
-        <h2>Another furry on the internet</h2>
-      </hgroup>
+                <tr align="center">
+                    <td align="center">
+                        <p>
+                            Hello there.
+                            I'm Griffin, your <a href="images/ref.png">favourite folf</a>
+                            causing chaos on the internet.
+                        </p>
 
-      <nav>
-        <ul>
-          <li><a href="/">Home</a></li>
-          <li><a href="techstuff.html">Tech Stuff</a></li>
-          <li><a href="otherstuff.html">Other Stuff</a></li>
-          <li><a href="contact.html">Contact</a></li>
-        </ul>
-        <ul>
-          <li><a href="legacy/">Legacy Site for Old Browsers</a></li>
-        </ul>
-      </nav>
+                        <p>
+                            There's not much here other than my contacts and a view of my
+                            <a href="collection.html">computer collection</a>.
+                        </p>
 
-      <hr>
-    </header>
+                        <p>
+                            Why the <a href="https://github.com/GriffintheFolf/griffinthefolf.github.io">simplistic page design</a>?
+                            It's all that's needed for some
+                            contacts and static content.<br>Why overcomplicate things?
+                        </p>
 
-    <main>
-      <img src="images/licc.jpg" style="float:right;" width="25%" height="25%">
+                        <hr>
+                    </td>
+                </tr>
 
-      <hgroup>
-        <h1>Hello.</h1>
-        <h2>I'm Thomas, but you can call me Griffin. (they/them)</h2>
-      </hgroup>
+                <tr align="center">
+                    <td>
+                        <h1>Contacts</h1>
 
-      <p>
-        I exist on the internet as a collector of old tech, with an
-        obsession of pushing machines further than they were ever
-        intended.
-      </p>
+                        <ul>
+                            <li>
+                                Discord: Griffin#2887
+                            </li>
+                            <li>
+                                Mastodon:
+                                <a href="https://tech.lgbt/@GriffintheFolf">@GriffintheFolf@tech.lgbt</a>
+                            </li>
+                            <li>
+                                Telegram:
+                                <a href="https://t.me/GriffintheFolf">@GriffintheFolf</a>
+                            </li>
+                            <li>
+                                Twitter:
+                                <a href="https://twitter.com/GriffintheFolf">@GriffintheFolf</a>
+                            </li>
+                        </ul>
+                    </td>
+                </tr>
 
-      <p>
-        I also tinker around with software development from time to time.
-        Other side hobbies include cars and casual photography.
-      </p>
+                <tr align="center">
+                    <td>
+                        <p>
+                            Copyright &copy; 2021-2022 Griffin
+                        </p>
 
-      <p>
-        Remember, don't forget to have a great day!
-      </p>
-    </main>
-
-    <footer>
-      <hr>
-
-      <p>
-        Copyright &copy; 2021-2022 Thomas Sirack. See the
-        <a href="copyright.html">
-          LICENCE file
-        </a> for more details.
-      </p>
-    </footer>
-  </body>
+                        <p>
+                            <img src="http://www.w3.org/Icons/valid-html32"
+                            height="31" width="88" alt="Valid HTML 3.2">
+                          </p>
+                    </td>
+                </tr>
+            </table>
+        </center>
+    </body>
 </html>
