--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
     <head>
         <meta http-equiv="content-type" content="text/html; charset=UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
         <title>Griffin</title>
     </head>
@@ -11,7 +12,7 @@
             <table align="center">
                 <tr align="center">
                     <td>
-                        <img src="images/roof.jpg" height="250">
+                        <img src="images/roof.jpg" height="250" alt="By @AM24thewolf">
                         <h1>Griffin!</h1>
                     </td>
                 </tr>
