Pride folfer! (thank you Nix)

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
             <table align="center">
                 <tr align="center">
                     <td>
-                        <img src="images/roof.jpg" height="250" alt="By @AM24thewolf">
+                        <img src="images/pride2022.jpg" height="450" title="By @NixSnowsong" alt="Griffin sitting in a reclined position in a forest with a rainbow flag, wearing a bandana with the non-binary flag">
                         <h1>Griffin!</h1>
                     </td>
                 </tr>
